tests/ui/parser/misspelled-keywords/hrdt.stderr
error: expected one of `!`, `(`, `+`, `::`, `<`, `where`, or `{`, found keyword `for`
  --> $DIR/hrdt.rs:7:11
   |
LL |     Where for<'a> F: Fn(&'a (u8, u16)) -> &'a u8,
   |           ^^^ expected one of 7 possible tokens
   |
help: write keyword `where` in lowercase (notice the capitalization)
   |
LL -     Where for<'a> F: Fn(&'a (u8, u16)) -> &'a u8,
LL +     where for<'a> F: Fn(&'a (u8, u16)) -> &'a u8,
   |

error: aborting due to 1 previous error

